Full working project version But refactoring will happen

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/cherry-blossom.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kalpana-react</title>
+    <meta name="description" content="Kalpana - Professional Makeup Artist Portfolio" />
+    <title>Kalpana | Makeup Artist Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
